--- a/disneyworldmap.html
+++ b/disneyworldmap.html
@@ -27,7 +27,7 @@
 
 <script>
 
-mapboxgl.accessToken = 'pk.eyJ1Ijoib2xlc2tvb2xtb20iLCJhIjoiY2t0aTYwMXBpMHl5dzJvb2xnN3RzZno5ayJ9.BfDA6LxHPBb8ZB62YcWXkA';
+mapboxgl.accessToken = //'insert your mapbox accessToken here';
 
 let map = new mapboxgl.Map({
      container: 'map',
